force-app/main/default/objects/Pharmacy_Medication_Inventory__c/Pharmacy_Medication_Inventory__c.object-meta.xml
<CustomObject>
    <label>Pharmacy Medication Inventory</label>
    <nameField>
        <displayFormat>PMI-{0000}</displayFormat>
        <label>Pharmacy Medication Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmacy Medication Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>