force-app/main/default/objects/Pharmacy_Medication_Inventory__c/fields/Healthcare_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Facility__c</fullName>
    <label>Healthcare Facility</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Pharmacy Medication Inventories</relationshipLabel>
    <relationshipName>Pharmacy_Medication_Inventories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>