force-app/main/default/objects/Pharmacy_Medication_Inventory__c/fields/Is_Out_of_Stock__c.field-meta.xml
<CustomField>
    <fullName>Is_Out_of_Stock__c</fullName>
    <formula>Quantity_on_Hand__c &lt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Out of Stock</label>
    <type>Checkbox</type>
</CustomField>