force-app/main/default/objects/Pharmacy_Medication_Inventory__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>When the stock quantity was last updated</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>