force-app/main/default/objects/Pharmacy_Medication_Inventory__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <label>Medication</label>
    <referenceTo>Medication</referenceTo>
    <relationshipLabel>Pharmacy Medication Inventories</relationshipLabel>
    <relationshipName>Pharmacy_Medication_Inventories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>